--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,7 +8,7 @@ $font-size-base: 1.2rem;
 // Color for the body text
 $body-color: #423d3d;
 
-// Border radius for elements
+// Border radius for buttons
 $btn-border-radius: 1rem;
 $btn-border-radius-sm: 1rem;
 
